tests/parsing/smtlib/mcil/errors/281_check-system_bad_attribute_5.mcil
(check-system sys :output () _)